# rust-test

./: Cargo.toml
src/: main.rs
src/shared/: mod.rs
